<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_twitter" 
        
        android:textSize="20sp"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:padding="10dp"
        />
    
    <LinearLayout 
        android:id="@+id/uname_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:orientation="horizontal"
       	android:layout_below="@id/header"
       	
       	android:layout_marginTop="25dp"
       	android:layout_centerHorizontal="true"
        >
        <TextView 
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_username"
            
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            />
        
        <EditText 
            android:id="@+id/fld_username"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/lbl_enter_username"
            
            android:inputType="textEmailAddress"
            android:layout_marginLeft="8dp"
            android:textSize="13sp"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            />
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/pwd_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:orientation="horizontal"
       	android:layout_below="@id/uname_block"
       	
       	android:layout_marginTop="25dp"
       	android:layout_centerHorizontal="true"
        >
        <TextView 
            android:id="@+id/pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pwd"
            
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:textColor="@android:color/black"
            />
        
        <EditText 
            android:id="@+id/fld_pwd"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="@string/lbl_enter_pwd"
            
            android:inputType="textPassword"
            android:layout_marginLeft="8dp"
            android:textSize="13sp"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            
            />
        
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwd_block"
        android:text="@string/lbl_login"
        
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textStyle="bold"
        />
    

</RelativeLayout>
